--- a/trendy-fashion/package.json
+++ b/trendy-fashion/package.json
@@ -13,10 +13,14 @@
     "framer-motion": "^8.4.3",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
+    "react-auto-image-slider": "^1.0.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
+    "reactjs-popup": "^2.0.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
     "thunk": "^0.0.1",
