--- a/trendy-fashion/package.json
+++ b/trendy-fashion/package.json
@@ -25,9 +25,11 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
+    "react-slick": "^0.29.0",
     "reactjs-popup": "^2.0.5",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "thunk": "^0.0.1",
     "web-vitals": "^2.1.4"
   },
